--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
