--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
+    "google": "^2.1.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18"
   },
