--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
     "google": "^2.1.0",
@@ -17,6 +18,7 @@
     "next": "14.1.0",
     "openai": "^4.28.4",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18"
   },
   "devDependencies": {
