--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@google/generative-ai": "^0.2.1",
+    "@vercel/speed-insights": "^1.0.10",
     "cors": "^2.8.5",
     "google": "^2.1.0",
     "mongodb": "^6.4.0",
