--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "nextjs-cors": "^2.2.0",
     "openai": "^4.28.4",
     "react": "^18",
     "react-awesome-reveal": "^4.2.8",
